kustomize/app/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodejs-dev-x03
  name: nodejs-dev-x03
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: nodejs-dev-x03
  template:
    metadata:
      labels:
        app: nodejs-dev-x03
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
      - image: ___IMAGE_URL___@___IMAGE_DIGEST___
        name: nodejs-dev-x03
        ports:
        - containerPort: 3000
          protocol: TCP
      serviceAccountName: nodejs-dev-x03-sa
