kustomize/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodejs-dev-x03
  name: nodejs-dev-x03
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 3000
  selector:
    app: nodejs-dev-x03
  type: ClusterIP
