kustomize/app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: nodejs-dev-x03
  name: nodejs-dev-x03
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: nodejs-dev-x03
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
